Load basic styles (index).

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 	<!-- STYLES -->
 	<link rel="stylesheet" type="text/css" href="styles/reset.css">
+	<link rel="stylesheet" type="text/css" href="styles/basic.css">
 	<link rel="stylesheet" type="text/css" href="styles/styles.css">
 
 	<!--[if lte IE 8]>
