Add basic styles for buttons.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<!-- STYLES -->
 	<link rel="stylesheet" type="text/css" href="styles/reset.css">
 	<link rel="stylesheet" type="text/css" href="styles/basic.css">
+	<link rel="stylesheet" type="text/css" href="styles/buttons.css">
 	<link rel="stylesheet" type="text/css" href="styles/styles.css">
 
 	<!--[if lte IE 8]>
