Improve buttons' browser compatibility.

--- a/demo.html
+++ b/demo.html
@@ -203,36 +203,21 @@
 
 			<article id="pre">
 				<h2>Pre</h2>
-				<pre>
-main()
-{
-	printf("hello, world\n");
-}
-				</pre>
+				<pre>main() { printf("hello, world\n"); }</pre>
 			</article>
 
 			<hr>
 
 			<article id="code">
 				<h2>Code</h2>
-				<code>
-main()
-{
-	printf("hello, world\n");
-}
-				</code>
+				<code>main() { printf("hello, world\n"); }</code>
 			</article>
 
 			<hr>
 
 			<article id="code_themed">
-				<h2>Code themed</h2>
-				<code class="monokai">
-main()
-{
-	printf("hello, world\n");
-}
-				</code>
+				<h2>Code (monokai theme)</h2>
+				<code class="monokai">main() { printf("hello, world\n"); }</code>
 			</article>
 
 <!-- 			<hr>
