Fix bottom margin for buttons.

--- a/demo.html
+++ b/demo.html
@@ -10,7 +10,7 @@
 	<![endif]-->
 
 	<!-- FONTS -->
-	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:400,600&subset=latin,greek">
+	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:400,600&amp;subset=latin,greek">
 
 	<!-- STYLES -->
 	<link rel="stylesheet" type="text/css" href="styles/reset.css">
