Add css diagnostics.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
 
 	<!-- STYLES -->
 	<link rel="stylesheet" type="text/css" href="styles/reset.css">
-	<link rel="stylesheet" type="text/css" href="styles/basic.css">
+	<link rel="stylesheet" type="text/css" href="styles/typo.css">
+	<link rel="stylesheet" type="text/css" href="styles/helpers.css">
+	<link rel="stylesheet" type="text/css" href="styles/inputs.css">
 	<link rel="stylesheet" type="text/css" href="styles/buttons.css">
 	<link rel="stylesheet" type="text/css" href="styles/styles.css">
+	<link rel="stylesheet" type="text/css" href="styles/diags.css">
 
 	<!--[if lte IE 8]>
 	<link rel="stylesheet" type="text/css" href="styles/ie.css">
@@ -64,7 +67,7 @@
 
 		<!-- SUBFOOTER CONTAINER -->
 		<div class="sub_footer_wrapper">
-			<div class="credits">Web Design & Development by <a href="http://www.yourcompany.com/">Your Company</a></div>
+			<div class="credits">Web Design & Development by <a href="#">Company</a></div>
 		</div>
 		<!-- SUBFOOTER CONTAINER ends -->
 	</footer>
