--- a/demo.html
+++ b/demo.html
@@ -19,6 +19,7 @@
 	<link rel="stylesheet" type="text/css" href="styles/inputs.css">
 	<link rel="stylesheet" type="text/css" href="styles/buttons.css">
 	<link rel="stylesheet" type="text/css" href="styles/styles.css">
+	<link rel="stylesheet" type="text/css" href="styles/diags.css">
 
 	<!--[if lte IE 8]>
 	<link rel="stylesheet" type="text/css" href="styles/ie.css">
@@ -60,6 +61,8 @@
 				<li><a href="#inputs">Inputs</a></li>
 				<li>|</li>
 				<li><a href="#buttons">Buttons</a></li>
+				<li>|</li>
+				<li><a href="#diagnose">Diagnose</a></li>
 			</ul>
 			<div class="clear"></div>
 		</nav>
@@ -83,6 +86,7 @@
 				<li><a href="#code_themed">Code themed</a></li>
 				<li><a href="#inputs">Inputs</a></li>
 				<li><a href="#buttons">Buttons</a></li>
+				<li><a href="#Diagnose">Diagnose</a></li>
 			</ul>
 			<div class="clear"></div>
 		</nav>
@@ -266,6 +270,28 @@
 
 			<hr>
 
+			<article id="diagnose">
+				<h2>Diagnose empty paragraphs, list items, anchors and image attributes</h2>
+				<p>An empty paragraph is below:</p>
+				<p></p>
+				<p>An image without an alt attribute and with an empty title is below:</p>
+				<p><img title="" src="http://placehold.it/350x150"></p>
+				<p>The following list is missing the list item 3 and 5:</p>
+				<ol>
+					<li>List Item 1</li>
+					<li><a href="#">List Item 2</a></li>
+					<li><strong></strong></li>
+					<li><i>List Item 4</i></li>
+					<li></li>
+					<li>List Item 6</li>
+				</ol>
+				<p>The following anchors have empty href and title attributes:</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. <a href="#" title="">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</a>.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <a href="">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</a> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</article>
+
+			<hr>
+
 		</section>
 		<!-- CONTENT ends-->
 		<div class="clear"></div>
@@ -280,7 +306,7 @@
 
 		<!-- SUBFOOTER CONTAINER -->
 		<div class="sub_footer_wrapper">
-			<div class="credits">This is footer and <a href="">credits</a> goes here. <a href="#navigation">Top</a></div>
+			<div class="credits">This is footer and <a href="#">credits</a> goes here. <a href="#navigation">Top</a></div>
 		</div>
 		<!-- SUBFOOTER CONTAINER ends -->
 	</footer>
