Disable diagnostics for IE8 and earlier.

--- a/demo.html
+++ b/demo.html
@@ -62,8 +62,8 @@
 				<li><a href="#inputs">Inputs</a></li>
 				<li>|</li>
 				<li><a href="#buttons">Buttons</a></li>
-				<li>|</li>
-				<li><a href="#diagnose">Diagnose</a></li>
+				<li class="ie">|</li>
+				<li class="ie"><a href="#diagnose">Diagnose</a></li>
 			</ul>
 			<div class="clear"></div>
 		</nav>
@@ -281,7 +281,7 @@
 
 			<hr>
 
-			<article id="diagnose">
+			<article id="diagnose" class="ie">
 				<h2>Diagnose empty paragraphs, list items, anchors and image attributes</h2>
 				<p>An empty paragraph is below.</p>
 				<p></p>
@@ -301,7 +301,7 @@
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <a href="">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</a> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			</article>
 
-			<hr>
+			<hr class="ie">
 
 		</section>
 		<!-- CONTENT ends-->
