Add contitions stylesheet.

--- a/demo.html
+++ b/demo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Blankplate | Yet another HTML5 Starter Kit</title>
+	<title>Blankplate | Yet another HTML5/CSS3 Starter Kit</title>
 	<meta name="description" content="">
 
 	<!--[if lt IE 9]>
