Update demo - add condition.

--- a/demo.html
+++ b/demo.html
@@ -19,6 +19,7 @@
 	<link rel="stylesheet" type="text/css" href="styles/inputs.css">
 	<link rel="stylesheet" type="text/css" href="styles/buttons.css">
 	<link rel="stylesheet" type="text/css" href="styles/styles.css">
+	<link rel="stylesheet" type="text/css" href="styles/conditions.css">
 	<link rel="stylesheet" type="text/css" href="styles/diags.css">
 
 	<!--[if lte IE 8]>
@@ -302,6 +303,16 @@
 			</article>
 
 			<hr class="ie">
+
+			<article id="conditions">
+				<h2>Conditions</h2>
+				<p>The rules in <strong>conditions stylesheet</strong> helps you target separately Firefox, Opera and Safari browsers. Below is a demonstration where a specific paragraph is displayed for each browser. <i>Note: if you can see all three paragraphs then you probably use IE</i>.</p>
+				<p class="firefox">You probably use <strong>firefox</strong> to view this page.</p>
+				<p class="opera">You probably use <strong>opera</strong> to view this page.</p>
+				<p class="safari">You probably use <strong>	safari</strong> to view this page.</p>
+			</article>
+
+			<hr>
 
 		</section>
 		<!-- CONTENT ends-->
