Update comments in conditions stylesheet.

--- a/demo.html
+++ b/demo.html
@@ -306,7 +306,7 @@
 
 			<article id="conditions">
 				<h2>Conditions</h2>
-				<p>The rules in <strong>conditions stylesheet</strong> helps you target separately Firefox, Opera and Safari browsers. Below is a demonstration where a specific paragraph is displayed for each browser. <i>Note: if you can see all three paragraphs then you probably use IE</i>.</p>
+				<p>The rules in <strong>conditions stylesheet</strong> helps you target separately Firefox, Opera and Safari browsers. Below is a demonstration where a specific paragraph is displayed for each browser. <i>Note: if you can see all three paragraphs then you probably use IE or Opera 12</i>.</p>
 				<p class="firefox">You probably use <strong>firefox</strong> to view this page.</p>
 				<p class="opera">You probably use <strong>opera</strong> to view this page.</p>
 				<p class="safari">You probably use <strong>	safari</strong> to view this page.</p>
