--- a/demo.html
+++ b/demo.html
@@ -52,7 +52,7 @@
 				<li>|</li>
 				<li><a href="#blockquotes">Blockquotes</a></li>
 				<li>|</li>
-				<li><a href="#ordered_lists">Lists</a></li>
+				<li><a href="#unordered_lists">Lists</a></li>
 				<li>|</li>
 				<li><a href="#pre">Pre</a></li>
 				<li>|</li>
@@ -83,7 +83,7 @@
 				<li><a href="#strikethrough">Strikethrough</a></li>
 				<li><a href="#underline">Underline</a></li>
 				<li><a href="#blockquotes">Blockquotes</a></li>
-				<li><a href="#ordered_lists">Lists</a></li>
+				<li><a href="#unordered_lists">Lists</a></li>
 				<li><a href="#pre">Pre</a></li>
 				<li><a href="#code">Code</a></li>
 				<li><a href="#code_themed">Code themed</a></li>
@@ -139,8 +139,8 @@
 			<!-- CONTENT BLOCK -->
 			<article id="bold">
 				<h2>Bold</h2>
-				<p>Active only in paragraphs and list items.</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <strong>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</strong> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p>Both <code>strong</code> and <code>b</code> tags are active only in paragraphs and list items.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <strong>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</strong> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. <b>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</b>.</p>
 			</article>
 			<!-- CONTENT BLOCK ends -->
 			<hr>
@@ -148,8 +148,8 @@
 			<!-- CONTENT BLOCK -->
 			<article id="italics">
 				<h2>Italics</h2>
-				<p>Active only in paragraphs and list items.</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <i>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</i> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p>Both <code>em</code> and <code>i</code> tags are active only in paragraphs and list items.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <em>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</em> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. <i>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</i>.</p>
 			</article>
 			<!-- CONTENT BLOCK ends -->
 			<hr>
@@ -181,8 +181,8 @@
 
 			<hr>
 
-			<article id="ordered_lists">
-				<h2>Ordered lists</h2>
+			<article id="unordered_lists">
+				<h2>Unordered lists</h2>
 				<p>Active only in paragraphs.</p>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 				<ul>
@@ -197,8 +197,8 @@
 
 			<hr>
 
-			<article id="unordered_lists">
-				<h2>Unordered lists</h2>
+			<article id="ordered_lists">
+				<h2>Ordered lists</h2>
 				<p>Active only in paragraphs.</p>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 				<ol>
@@ -233,15 +233,6 @@
 				<p>Apply <code>.monokai</code> class to enable monokai colors.</p>
 				<p>Now <code class="monokai">monokai code</code> behaves as an inline element.</p>
 			</article>
-
-<!-- 			<hr>
-
-			<article id="gradient">
-				<h2>Gradient, radius and box shadow helpers</h2>
-				<div class="gradient radius box_shadow">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</div>
-			</article> -->
 
 			<hr>
 
