--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<header>
 		<nav>
 			<ul>
-				<li><a href="#">Home</a></li>
+				<li>This is a blank template. If you're looking for something more, check the <a href="demo.html"><b>demo</b></a> page.</li>
 			</ul>
 		</nav>
 	</header>
@@ -68,7 +68,7 @@
 
 		<!-- SUBFOOTER CONTAINER -->
 		<div class="sub_footer_wrapper">
-			<div class="credits">Web Design & Development by <a href="#">Company</a></div>
+			<div class="credits"><a href="#"></a></div>
 		</div>
 		<!-- SUBFOOTER CONTAINER ends -->
 	</footer>
