Add some basic rules for the label tags.

--- a/demo.html
+++ b/demo.html
@@ -254,6 +254,17 @@
 
 			<hr>
 
+			<article id="labels">
+				<h2>Labels</h2>
+				<p>Use <code>.inline</code> class to make label stop behaving like a block.</p>
+				<p><label>This is a label</label><input type="text"></p>
+				<p><input type="text"><label class="inline">This is an inline label</label></p>
+				<p><label class="inline">This is an inline label</label><input type="text"></p>
+				<p><button class="btn"><span>button</span></button></p>
+			</article>
+
+			<hr>
+
 			<article id="buttons">
 				<h2>Buttons</h2>
 				<p>Apply <code>.btn</code> class to any <code>a</code>, <code>input</code> or <code>button</code> tag.</p>
