Rename css files.

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
 	<!-- STYLES -->
 	<link rel="stylesheet" type="text/css" href="styles/reset.css">
-	<link rel="stylesheet" type="text/css" href="styles/typo.css">
+	<link rel="stylesheet" type="text/css" href="styles/typography.css">
 	<link rel="stylesheet" type="text/css" href="styles/helpers.css">
 	<link rel="stylesheet" type="text/css" href="styles/inputs.css">
 	<link rel="stylesheet" type="text/css" href="styles/buttons.css">
 	<link rel="stylesheet" type="text/css" href="styles/styles.css">
 	<link rel="stylesheet" type="text/css" href="styles/media.css">
 	<link rel="stylesheet" type="text/css" href="styles/conditions.css">
-	<link rel="stylesheet" type="text/css" href="styles/diags.css">
+	<link rel="stylesheet" type="text/css" href="styles/diagnostics.css">
 
 	<!--[if lte IE 8]>
 	<link rel="stylesheet" type="text/css" href="styles/ie.css">
@@ -35,6 +35,7 @@
 	<header>
 		<nav>
 			<ul>
+				<li><h1>Blankplate</h1></li>
 				<li>This is a blank template. If you're looking for something more, check the <a href="demo.html"><b>demo</b></a> page.</li>
 			</ul>
 		</nav>
