--- a/demo.html
+++ b/demo.html
@@ -14,14 +14,14 @@
 
 	<!-- STYLES -->
 	<link rel="stylesheet" type="text/css" href="styles/reset.css">
-	<link rel="stylesheet" type="text/css" href="styles/typo.css">
+	<link rel="stylesheet" type="text/css" href="styles/typography.css">
 	<link rel="stylesheet" type="text/css" href="styles/helpers.css">
 	<link rel="stylesheet" type="text/css" href="styles/inputs.css">
 	<link rel="stylesheet" type="text/css" href="styles/buttons.css">
 	<link rel="stylesheet" type="text/css" href="styles/styles.css">
 	<link rel="stylesheet" type="text/css" href="styles/media.css">
 	<link rel="stylesheet" type="text/css" href="styles/conditions.css">
-	<link rel="stylesheet" type="text/css" href="styles/diags.css">
+	<link rel="stylesheet" type="text/css" href="styles/diagnostics.css">
 
 	<!--[if lte IE 8]>
 	<link rel="stylesheet" type="text/css" href="styles/ie.css">
