Add BareGrid, a grid system.

--- a/demo.html
+++ b/demo.html
@@ -14,6 +14,7 @@
 
 	<!-- STYLES -->
 	<link rel="stylesheet" type="text/css" href="styles/reset.css">
+	<link rel="stylesheet" type="text/css" href="styles/grid.css">
 	<link rel="stylesheet" type="text/css" href="styles/typography.css">
 	<link rel="stylesheet" type="text/css" href="styles/helpers.css">
 	<link rel="stylesheet" type="text/css" href="styles/inputs.css">
@@ -62,6 +63,8 @@
 				<li><a href="#inputs">Inputs</a></li>
 				<li>|</li>
 				<li><a href="#buttons">Buttons</a></li>
+				<li>|</li>
+				<li><a href="#grid">Grid</a></li>
 				<li class="ie">|</li>
 				<li class="ie"><a href="#diagnose">Diagnose</a></li>
 			</ul>
@@ -87,7 +90,8 @@
 				<li><a href="#code">Code</a></li>
 				<li><a href="#inputs">Inputs</a></li>
 				<li><a href="#buttons">Buttons</a></li>
-				<li><a href="#Diagnose">Diagnose</a></li>
+				<li><a href="#grid">Grid</a></li>
+				<li><a href="#diagnose">Diagnose</a></li>
 			</ul>
 			<div class="clear"></div>
 		</nav>
@@ -272,6 +276,463 @@
 				<p>
 					<a class="btn" href="#">anchor</a>
 				</p>
+			</article>
+
+			<hr>
+
+			<article id="grid">
+				<h2>Grid</h2>
+				<p>A flexible grid system in less than 1.6 Kb uncompressed!</p>
+				<div class="row one">
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row two">
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row three">
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row four">
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row five">
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row six">
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row seven">
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row eight">
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row nine">
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row ten">
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row eleven">
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row twelve">
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row twelve right">
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row twelve right">
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row twelve right">
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row twelve right">
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row twelve right">
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row twelve right">
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row twelve right">
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row twelve right">
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row twelve right">
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row twelve right">
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row twelve right">
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+
+				<div class="row twelve">
+					<div class="column eleventh">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row twelve">
+					<div class="column tenth">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row twelve">
+					<div class="column nineth">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row twelve">
+					<div class="column eighth">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row twelve">
+					<div class="column seventh">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row twelve">
+					<div class="column sixth">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row twelve">
+					<div class="column fifth">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row twelve">
+					<div class="column fourth">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row twelve">
+					<div class="column third">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row twelve">
+					<div class="column second">Column</div>
+					<div class="clear"></div>
+				</div>
+
+				<div class="row twelve">
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row twelve">
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row twelve">
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row twelve">
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row twelve">
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row twelve">
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row twelve">
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row twelve">
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row twelve">
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row twelve">
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row twelve">
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row twelve">
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+
+				<div class="row twelve right">
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row eleven right">
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row ten right">
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row nine right">
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row eight right">
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row seven right">
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row six right">
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row five right">
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row four right">
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row three right">
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row two right">
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row one">
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+
+				<div class="row twelve">
+					<div class="column">Column</div>
+					<div class="column eleventh">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row twelve">
+					<div class="column second">Column</div>
+					<div class="column nineth">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row twelve">
+					<div class="column third">Column</div>
+					<div class="column seventh">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row twelve">
+					<div class="column fourth">Column</div>
+					<div class="column fifth">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row twelve">
+					<div class="column fifth">Column</div>
+					<div class="column third">Column</div>
+					<div class="clear"></div>
+				</div>
+				<div class="row twelve">
+					<div class="column sixth">Column</div>
+					<div class="column">Column</div>
+					<div class="clear"></div>
+				</div>
+
 			</article>
 
 			<hr>
