--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 	<!-- STYLES -->
 	<link rel="stylesheet" type="text/css" href="styles/reset.css">
+	<link rel="stylesheet" type="text/css" href="styles/grid.css">
 	<link rel="stylesheet" type="text/css" href="styles/typography.css">
 	<link rel="stylesheet" type="text/css" href="styles/helpers.css">
 	<link rel="stylesheet" type="text/css" href="styles/inputs.css">
