Add css3-mediaqueries.js to enable media queries for legacy browsers.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
 	<!--[if lte IE 8]>
 	<link rel="stylesheet" type="text/css" href="styles/ie.css">
+	<script src="js/css3-mediaqueries.js"></script>
 	<![endif]-->
 </head>
 <body>
