--- a/demo.html
+++ b/demo.html
@@ -14,6 +14,7 @@
 
 	<!-- STYLES -->
 	<link rel="stylesheet" type="text/css" href="styles/reset.css">
+	<link rel="stylesheet" type="text/css" href="styles/grid.css">
 	<link rel="stylesheet" type="text/css" href="styles/typography.css">
 	<link rel="stylesheet" type="text/css" href="styles/helpers.css">
 	<link rel="stylesheet" type="text/css" href="styles/inputs.css">
@@ -25,6 +26,7 @@
 
 	<!--[if lte IE 8]>
 	<link rel="stylesheet" type="text/css" href="styles/ie.css">
+	<script src="js/css3-mediaqueries.js"></script>
 	<![endif]-->
 </head>
 <body>
