--- a/demo.html
+++ b/demo.html
@@ -334,9 +334,11 @@
 
 	<!-- JQuery -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
-	<script>window.jQuery || document.write('<script src="js/jquery-1.8.1.min.js"><\/script>')</script>
+	<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.1.min.js"><\/script>')</script>
 
 	<!-- JS -->
+	<script src="js/plugins.js"></script>
+	<script src="js/initializers.js"></script>
 	<!-- JS ends -->
 
 </body>
