Add useful snippets of code

--- a/demo.html
+++ b/demo.html
@@ -19,6 +19,7 @@
 	<link rel="stylesheet" type="text/css" href="styles/helpers.css">
 	<link rel="stylesheet" type="text/css" href="styles/inputs.css">
 	<link rel="stylesheet" type="text/css" href="styles/buttons.css">
+	<link rel="stylesheet" type="text/css" href="styles/snippets.css">
 	<link rel="stylesheet" type="text/css" href="styles/styles.css">
 	<link rel="stylesheet" type="text/css" href="styles/media.css">
 	<link rel="stylesheet" type="text/css" href="styles/conditions.css">
