Add google analytics tracking code

--- a/demo.html
+++ b/demo.html
@@ -30,6 +30,11 @@
 	<link rel="stylesheet" type="text/css" href="styles/ie.css">
 	<script src="js/css3-mediaqueries.js"></script>
 	<![endif]-->
+
+	<!-- GOOGLE ANALYTICS -->
+	<script src="js/ga.js"></script>
+	<!-- GOOGLE ANALYTICS ends -->
+
 </head>
 <body>
 
