--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
 	<link rel="stylesheet" type="text/css" href="styles/ie.css">
 	<script src="js/css3-mediaqueries.js"></script>
 	<![endif]-->
+
+	<!-- GOOGLE ANALYTICS -->
+	<script src="js/ga.js"></script>
+	<!-- GOOGLE ANALYTICS ends -->
 </head>
 <body>
 
